--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <div class="container">
     <div class="col-md-8 col-md-offset-2">
       <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title containercolor">JavaScript编程入门</h3>
+        <div class="panel-heading containercolor">
+          <h3 class="panel-title">JavaScript编程入门</h3>
         </div>
         <div class="panel-body">
           <li class="list-group-item">
