--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="col-md-8 col-md-offset-2">
       <div class="panel panel-default">
-        <div class="panel-heading containercolor">
+        <div class="panel-heading" class="containercolor">
           <h3 class="panel-title">JavaScript编程入门</h3>
         </div>
         <div class="panel-body">
