--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </div>
   <div class="container">
     <div class="col-md-8 col-md-offset-2">
-      <div class="panel panel-default">
-        <div class="panel-heading" class="containercolor">
+      <div class="panel panel-default containercolor">
+        <div class="panel-heading">
           <h3 class="panel-title">JavaScript编程入门</h3>
         </div>
         <div class="panel-body">
