--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <h1>JavaScript编程入门</h1>
     </div>
   </div>
-  <div class="container">
+  <div class="container containercolor">
     <div class="col-md-8 col-md-offset-2">
-      <div class="panel panel-default containercolor">
+      <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title">JavaScript编程入门</h3>
         </div>
