--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
   </div>
   <div class="container">
-    <div class="col-md-8 col-md-offset-2 containercolor">
+    <div class="col-md-8 col-md-offset-2">
       <div class="panel panel-default">
-        <div class="panel-heading">
+        <div class="panel-heading containercolor">
           <h3 class="panel-title">JavaScript编程入门</h3>
         </div>
         <div class="panel-body">
