--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <div class="container">
       <h1>JavaScript编程入门</h1>
     </div>
+    <div class="container">
+      <img src="" width="70" height="70"/>
+    </div>
   </div>
   <div class="container">
     <div class="col-md-8 col-md-offset-2">
       <div class="panel panel-default">
-        <div class="panel-heading containercolor">
+        <div class="panel-heading">
           <h3 class="panel-title">JavaScript编程入门</h3>
         </div>
         <div class="panel-body">
