--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
     
   <div class="container">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-8">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title">JavaScript编程入门</h3>
