--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="container">
       <h1>JavaScript编程入门</h1>
     </div>
-    <div class="container" style="color:#fce4ec">
+    <div class="container">
       <img src="http://qlogo3.store.qq.com/qzone/591351718/591351718/100?1501736043" width="70" height="70"/>
-      Sun Bo
+      <p class="myname">Sun Bo</p>
     </div>
   </div>
     
