--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>JavaScript编程入门</h1>
     </div>
     <div class="container">
-      <img src="http://qlogo3.store.qq.com/qzone/591351718/591351718/100?1501736043" width="70" height="70"/>
+      <img src="http://qlogo3.store.qq.com/qzone/591351718/591351718/100?1501736043" class="myphoto"/>
       <p class="myname">Sun Bo</p>
     </div>
   </div>
