--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
               孙博第一次作业-代码执行过程的几个概念总结[getting-started-with-javascript]
             </a>
           </li>
+          <li class="list-group-item">
+            <a href="https://github.com/ziyoubenteng/getting-started-with-javascript/blob/master/homework/lesson2/SunBo.md">
+              孙博第二次作业丰富化的数据格式含静态网页[getting-started-with-javascript]
+            </a>
+          </li>
         </div>
       </div>
     </div>
